--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: 码农生活
 email: wangtuo2005@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  source code, jquery, bootstrap, javascript
+  mysql, java, javascript, css
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  twang333
